force-app/main/default/objects/Family_Member__c/fields/Citizen__c.field-meta.xml
<CustomField>
    <fullName>Citizen__c</fullName>
    <label>Citizen</label>
    <referenceTo>Citizen__c</referenceTo>
    <relationshipLabel>Family Members</relationshipLabel>
    <relationshipName>Family_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>