force-app/main/default/objects/Family_Member__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <formula>IF(ISBLANK(Related_Citizen__c), BLANKVALUE(Member_Name__c, "(unnamed)"), Related_Citizen__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>