force-app/main/default/objects/Family_Member__c/fields/Is_Guardian__c.field-meta.xml
<CustomField>
    <fullName>Is_Guardian__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guardian</label>
    <type>Checkbox</type>
</CustomField>