force-app/main/default/objects/Family_Member__c/fields/Member_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Member_Date_of_Birth__c</fullName>
    <formula>Related_Citizen__r.Date_of_Birth__c</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Member Date of Birth</label>
    <type>Date</type>
</CustomField>