force-app/main/default/objects/Family_Member__c/fields/Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Name__c</fullName>
    <inlineHelpText>Used only when the relative has no Citizen record of their own.</inlineHelpText>
    <label>Member Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>