force-app/main/default/objects/Family_Member__c/fields/Minor_Application__c.field-meta.xml
<CustomField>
    <fullName>Minor_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The minor's passport application this guardian consent applies to.</inlineHelpText>
    <label>Minor Application</label>
    <referenceTo>Passport_Application__c</referenceTo>
    <relationshipLabel>Guardian Links</relationshipLabel>
    <relationshipName>Guardian_Links</relationshipName>
    <type>Lookup</type>
</CustomField>