force-app/main/default/objects/Family_Member__c/fields/Related_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Related_Citizen__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The other citizen in this relationship. Leave blank and use Member Name if that person has no citizen record yet.</inlineHelpText>
    <label>Related Citizen</label>
    <referenceTo>Citizen__c</referenceTo>
    <relationshipLabel>Related Family Members</relationshipLabel>
    <relationshipName>Related_Family_Members</relationshipName>
    <type>Lookup</type>
</CustomField>