force-app/main/default/objects/Family_Member__c/validationRules/Either_Related_Citizen_Or_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Either_Related_Citizen_Or_Name</fullName>
    <active>true</active>
    <description>A family member is identified either by a link to an existing Citizen record or by a free-text name (for relatives with no PSK record). At least one is mandatory or the row is meaningless.</description>
    <errorConditionFormula>AND( ISBLANK(Related_Citizen__c), ISBLANK(Member_Name__c) )</errorConditionFormula>
    <errorDisplayField>Member_Name__c</errorDisplayField>
    <errorMessage>Either link a Related Citizen or type a Member Name. A family member needs at least one of the two.</errorMessage>
</ValidationRule>